data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2016.wast
;; 7. **Test Description:** Construct a WASM module with a deep nesting of `if`, `block`, and `loop` control structures, using `br_if` extensively, and import a function altering the depth.    **Constraint Checked:** Depth-relative label indexing and stack unwinding during nested control structures.    **Relation:** Tests accurate reference and execution of deep nested control structures across module boundaries.

(assert_invalid
  (module
    (func $deep-nesting
      (block (result i32)
        (loop (result i32)
          (if (result i32)
            (block (result i32)
              (if (result i32)
                (block (br_if 2 (i32.const 1)))
                (block (br_if 0 (i32.const 0)))
              )
            )
            (block (br_if 1 (i32.const 1)))
          )
        )
      )
    )
  )
  "unknown label"
)